<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignUpActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="8dp">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        app:hintTextAppearance="@style/HintTextInputLayout"
        android:layout_height="wrap_content">
        <EditText
            android:background="@drawable/edit_text_style"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:id="@+id/edit_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        app:hintTextAppearance="@style/HintTextInputLayout"
        android:layout_height="wrap_content">
        <EditText
            android:background="@drawable/edit_text_style"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:id="@+id/edit_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_signin_style"
        android:onClick="btn_SignIn"
        android:textSize="@dimen/button_text_size"
        android:textColor="@android:color/white"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_signup_style"
        android:textSize="@dimen/button_text_size"
        android:textColor="@android:color/white"
        android:onClick="btn_SignUp"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/forgotPass"
        android:textSize="@dimen/button_text_size"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true" />

</LinearLayout>