<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_photo_camera_black_24dp"
            android:id="@+id/performRequestImage"
            android:layout_width="match_parent"
            android:layout_height="300dp" />



        <Button
            android:id="@+id/getPerformImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewPager"
            android:layout_marginTop="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_signin_style"
            android:text="get Image"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />
        <EditText
            android:imeOptions="actionDone"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLength="76"
            android:background="@drawable/edit_text_style"
            android:lines="3"
            android:maxLines="3"
            android:id="@+id/description_perform_request"
            android:hint="@string/description_create_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/cancel"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_signup_style"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size" />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/RequestPerform"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_signin_style"
                android:text="@string/ok"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>
        </LinearLayout>
</android.support.v7.widget.CardView>

